--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.artemis.mode=native
-spring.artemis.broker-url=tcp://localhost:61616
+#spring.artemis.broker-url=(tcp://localhost:61616,tcp://route-1.apps.mycluster.mycompany.com:443)?ha=true&reconnectAttempts=-1&useTopologyForLoadBalancing=false
+#spring.artemis.broker-url=tcp://localhost:61616
+spring.artemis.broker-url=(tcp://192.168.1.3:61616,tcp://192.168.1.3:51616)?ha=true&reconnectAttempts=10&failoverOnServerShutdown=true
 spring.artemis.user=admin
 spring.artemis.password=secret
+undertow.console-access-log=true
